--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,4 +26,4 @@ jobs:
     - name: publish
       env:
         super_secret: ${{ secrets.NEXUS }} 
-      run: dotnet pack -p:PackageVersion=2.1.$BUILD_NUMBER -c Release -o ./ && dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret *.nupkg && rm *.nupkg
+      run: dotnet pack -p:PackageVersion=2.1.$BUILD_NUMBER -c Release -o ./ && dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret ./Slipways.Data/*.nupkg && rm ./Slipways.Data/*.nupkg
