--- a/Slipways.Data/Slipways.Data.csproj
+++ b/Slipways.Data/Slipways.Data.csproj
@@ -10,6 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="NuGet.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="NuGet.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
