--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,9 +23,11 @@ jobs:
         dotnet-version: 3.1.100
     - name: Build with dotnet
       run: dotnet build --configuration Release
+    - name: pack
+      run: dotnet pack -p:PackageVersion=2.1.$BUILD_NUMBER -c Release -o ./
     - name: directory
       run: ls
     - name: publish
       env:
         super_secret: ${{ secrets.NEXUS }} 
-      run: dotnet pack -p:PackageVersion=2.1.$BUILD_NUMBER -c Release -o ./ && dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret /home/runner/work/Slipways.Data/Slipways.Data/*.nupkg && ls && rm ./*.nupkg
+      run: dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret /home/runner/work/Slipways.Data/Slipways.Data/*.nupkg && ls && rm ./*.nupkg
