--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,6 @@ jobs:
     - name: publish
       env:
         super_secret: ${{ secrets.NEXUS }} 
-      run: dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret **/*.nupkg
+      run: dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret *.nupkg
     - name: clean
-      run: rm **/*.nupkg
+      run: rm *.nupkg
