--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
   push: 
     # Sequence of patterns matched against refs/heads
     branches:    
-      - master         # Push events on master branch
+      - master         # Push events on master
 jobs:
   build:
 
