--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
+        source-url: https://nuget.pkg.github.com/Marcel-B/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Build
       run: dotnet build --configuration Release
     - name: Test
@@ -23,8 +26,9 @@ jobs:
     - name: Pack
       run: dotnet pack -p:PackageVersion=2.1.64 -c Release -o ./
     - name: Publish to Nexus
-      env:
-        super_secret: ${{ secrets.NEXUS }} 
-      run: dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret *.nupkg
+      #env:
+        #super_secret: ${{ secrets.NEXUS }} 
+      #run: dotnet nuget push -s https://nexus.qaybe.de/repository/nuget-hosted/ -k $super_secret *.nupkg
+      run: dotnet nuget push "*.nupkg" --skip-duplicate --no-symbols true
     - name: Clean Packages
       run: rm *.nupkg
